--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="alert_name">Alert Name</string>
     <string name="message">Message</string>
     <string name="setby">Set By</string>
+    <string name="action_settings">Settings</string>
+    <string name="record">Record</string>
+    <string name="stop">Stop</string>
+    <string name="description_info_pup">Info_pup</string>
+    <string name="description_info_sac">Info_sac</string>
+    <string name="description_info_asac">Info_asac</string>
+
 </resources>
